b2brp-backend/kubernetes/b2brp-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: b2brp-backend
  namespace: b2brp
  labels:
    name: b2brp-backend
    app: b2brp-backend
spec:
  containers:
    - name: b2brp-backend
      image: ghcr.io/mucks/b2brp-backend:main
      imagePullPolicy: Always
      ports:
        - containerPort: 4000
